--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,88 @@ sources/Data/
 lib/chrome-linux
 
 lib/chrome-win
+rdf-store/apache-jena-fuseki-4.6.1/run/config.ttl
+rdf-store/apache-jena-fuseki-4.6.1/run/shiro.ini
+rdf-store/apache-jena-fuseki-4.6.1/run/configuration/aq-store.ttl
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/tdb.lock
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GOSP.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GOSP.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GOSP.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPOS.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPOS.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPOS.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPU.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPU.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GPU.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GSPO.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GSPO.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/GSPO.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/journal.jrnl
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/nodes-data.bdf
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/nodes-data.obj
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/nodes.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/nodes.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/nodes.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSP.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSP.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSP.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSPG.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSPG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/OSPG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POS.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POS.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POS.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POSG.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POSG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/POSG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/prefixes-data.bdf
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/prefixes-data.obj
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/prefixes.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/prefixes.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/prefixes.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPO.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPO.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPO.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPOG.bpt
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPOG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/SPOG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/databases/aq-store/Data-0001/tdb.lock
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GOSP.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GOSP.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GPOS.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GPOS.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GSPO.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/GSPO.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/journal.jrnl
+rdf-store/apache-jena-fuseki-4.6.1/run/system/node2id.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/node2id.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/nodes.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/OSP.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/OSP.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/OSPG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/OSPG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/POS.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/POS.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/POSG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/POSG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/prefix2id.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/prefix2id.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/prefixes.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/prefixIdx.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/prefixIdx.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/SPO.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/SPO.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/SPOG.dat
+rdf-store/apache-jena-fuseki-4.6.1/run/system/SPOG.idn
+rdf-store/apache-jena-fuseki-4.6.1/run/system/tdb.cfg
+rdf-store/apache-jena-fuseki-4.6.1/run/system/tdb.lock
+rdf-store/apache-jena-fuseki-4.6.1/run/system_files/cdd4d854-b0de-40bc-afa3-c8eb88477628
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-mem
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb-dir
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb-dir-readonly
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb-mem
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb2
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb2-dir
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb2-dir-readonly
+rdf-store/apache-jena-fuseki-4.6.1/run/templates/config-tdb2-mem
